Pre-Prod V1.2.2, Adjusted modal images to prevent overflow on higher view screens

--- a/nav-UI.css
+++ b/nav-UI.css
@@ -176,7 +176,7 @@ footer a:hover {
 }
 
 .modal img {
-    min-width: 50vw;
+    max-height: 100%;
     cursor: default;
 }
 
